# algs4cplusplus

./: README.md
ch1/: CMakeLists.txt
ch1/10_Date/: CMakeLists.txt  main.cpp
ch1/11_Transaction/: CMakeLists.txt  main.cpp
ch1/12_Point2D/: CMakeLists.txt  main.cpp
ch1/13_RectHV/: CMakeLists.txt  main.cpp
ch1/14_Interval1D/: CMakeLists.txt  main.cpp
ch1/15_Interval2D/: CMakeLists.txt  main.cpp
ch1/16_Accumulator/: CMakeLists.txt  main.cpp
ch1/17_ResizingArrayStack/: CMakeLists.txt  main.cpp
ch1/18_LinkedStack/: CMakeLists.txt  main.cpp
ch1/19_Stack/: CMakeLists.txt  main.cpp
ch1/1_BinarySearch/: CMakeLists.txt  main.cpp
ch1/20_ResizingArrayQueue/: CMakeLists.txt  main.cpp
ch1/21_LinkedQueue/: CMakeLists.txt  main.cpp
ch1/22_Queue/: CMakeLists.txt  main.cpp
ch1/23_ResizingArrayBag/: CMakeLists.txt  main.cpp
ch1/24_LinkedBag/: CMakeLists.txt  main.cpp
ch1/25_Bag/: CMakeLists.txt  main.cpp
ch1/26_Stopwatch/: CMakeLists.txt  main.cpp
ch1/27_StopwatchCPU/: CMakeLists.txt  main.cpp
ch1/28_LinearRegression/: CMakeLists.txt  main.cpp
ch1/29_ThreeSum/: CMakeLists.txt  main.cpp
ch1/2_RandomSeq/: CMakeLists.txt  main.cpp
ch1/30_ThreeSumFast/: CMakeLists.txt  main.cpp
ch1/31_DoublingTest/: CMakeLists.txt  main.cpp
ch1/32_DoublingRatio/: CMakeLists.txt  main.cpp
ch1/33_QuickFindUF/: CMakeLists.txt  main.cpp
ch1/34_QuickUnionUF/: CMakeLists.txt  main.cpp
ch1/35_WeightedQuickUnionUF/: CMakeLists.txt  main.cpp
ch1/36_UF/: CMakeLists.txt  main.cpp
ch1/3_Average/: CMakeLists.txt  main.cpp
ch1/4_Cat/: CMakeLists.txt  main.cpp  out.txt
ch1/5_Knuth/: CMakeLists.txt  main.cpp
ch1/6_Counter/: CMakeLists.txt  main.cpp
ch1/7_StaticSETofInts/: CMakeLists.txt  main.cpp
ch1/8_Whitelist/: CMakeLists.txt  main.cpp
ch1/9_vector/: CMakeLists.txt  main.cpp
ch1/data/: cardsUnicode.txt
ch1/head/: Accumulator.h  Bag.h  BinarySearch.h  Counter.h  Date.h  DoublingTest.h  Interval1D.h  Interval2D.h  Knuth.h  LinearRegression.h  LinkedBag.h  LinkedQueue.h  LinkedStack.h  Point2D.h  Queue.h  QuickFindUF.h  QuickUnionUF.h  RectHV.h  ResizingArrayBag.h  ResizingArrayQueue.h  ResizingArrayStack.h  Stack.h  StaticSetofInts.h  Stopwatch.h  ThreeSum.h  ThreeSumFast.h  Transaction.h  UF.h  Vector.h  WeightedQuickUnionUF.h
ch2/: CMakeLists.txt
ch2/10_Quick/: CMakeLists.txt  main.cpp
ch2/11_Quick3way/: CMakeLists.txt  main.cpp
ch2/12_QuickX/: CMakeLists.txt  main.cpp
ch2/13_QuickBentleyMcIlroy/: CMakeLists.txt  main.cpp
ch2/14_TopM/: CMakeLists.txt  main.cpp
ch2/15_MaxPQ/: CMakeLists.txt  main.cpp
ch2/16_MinPQ/: CMakeLists.txt  main.cpp
ch2/17_IndexMinPQ/: CMakeLists.txt  main.cpp
ch2/18_IndexMaxPQ/: CMakeLists.txt  main.cpp
ch2/19_Multiway/: CMakeLists.txt  main.cpp
ch2/1_Insertion/: CMakeLists.txt  main.cpp
ch2/20_Heap/: CMakeLists.txt  main.cpp
ch2/2_InsertionX/: CMakeLists.txt  main.cpp
ch2/3_BinaryInsertion/: CMakeLists.txt  main.cpp
ch2/4_Selection/: CMakeLists.txt  main.cpp
ch2/5_Shell/: CMakeLists.txt  main.cpp
ch2/6_Merge/: CMakeLists.txt  main.cpp
ch2/7_MergeBU/: CMakeLists.txt  main.cpp
ch2/8_MergeX/: CMakeLists.txt  main.cpp
ch2/9_Inversions/: CMakeLists.txt  main.cpp
ch2/head/: BinaryInsertion.h  Date.h  Heap.h  IndexMaxPQ.h  IndexMinPQ.h  Insertion.h  InsertionX.h  Inversions.h  MaxPQ.h  Merge.h  MergeBU.h  MergeX.h  MinPQ.h  Multiway.h  Quick.h  Quick3way.h  QuickBentleyMcIlroy.h  QuickX.h  Selection.h  Shell.h  Transaction.h
ch3/: CMakeLists.txt
ch3/10_DeDup/: CMakeLists.txt  main.cpp
ch3/11_WhiteFilter/: CMakeLists.txt  main.cpp
ch3/12_BlackFilter/: CMakeLists.txt  main.cpp
ch3/13_LookupCSV/: CMakeLists.txt  main.cpp
ch3/14_LookupIndex/: CMakeLists.txt  main.cpp
ch3/15_FileIndex/: CMakeLists.txt  main.cpp
ch3/16_SparseVector/: CMakeLists.txt  main.cpp
ch3/1_FrequencyCounter/: CMakeLists.txt  main.cpp
ch3/2_SequentialSearchST/: CMakeLists.txt  main.cpp
ch3/3_BinarySearchST/: CMakeLists.txt  main.cpp
ch3/4_BST/: CMakeLists.txt  main.cpp
ch3/5_RedBlackBST/: CMakeLists.txt  main.cpp
ch3/6_SeparateChainingHashST/: CMakeLists.txt  main.cpp
ch3/7_LinearProbingHashST/: CMakeLists.txt  main.cpp
ch3/8_ST/: CMakeLists.txt  main.cpp
ch3/9_SET/: CMakeLists.txt  main.cpp
ch3/data/: elements.csv
ch3/head/: BST.h  BinarySearchST.h  LinearProbingHashST.h  RedBlackBST.h  SET.h  ST.h  SeparateChainingHashST.h  SequentialSearchST.h  SparseVector.h
ch4/: CMakeLists.txt
ch4/10_Cycle/: CMakeLists.txt  main.cpp
ch4/11_EulerianCycle/: CMakeLists.txt  main.cpp
ch4/12_EulerianPath/: CMakeLists.txt  main.cpp
ch4/13_SymbolGraph/: CMakeLists.txt  main.cpp
ch4/14_DegreesOfSeparation/: CMakeLists.txt  main.cpp
ch4/15_Digraph/: CMakeLists.txt  main.cpp
ch4/16_DigraphGenerator/: CMakeLists.txt  main.cpp
ch4/17_DirectedDFS/: CMakeLists.txt  main.cpp
ch4/18_NonrecursiveDirectedDFS/: CMakeLists.txt  main.cpp
ch4/19_DepthFirstDirectedPaths/: CMakeLists.txt  main.cpp
ch4/1_Graph/: CMakeLists.txt  main.cpp
ch4/20_BreadthFirstDirectedPaths/: CMakeLists.txt  main.cpp
ch4/21_DirectedCycle/: CMakeLists.txt  main.cpp
ch4/22_DirectedCycleX/: CMakeLists.txt  main.cpp
ch4/23_DirectedEulerianCycle/: CMakeLists.txt  main.cpp
ch4/24_DirectedEulerianPath/: CMakeLists.txt  main.cpp
ch4/25_DepthFirstOrder/: CMakeLists.txt  main.cpp
ch4/26_Topological/: CMakeLists.txt
ch4/27_TopologicalX/: CMakeLists.txt  main.cpp
ch4/28_TransitiveClosure/: CMakeLists.txt  main.cpp
ch4/29_SymbolDigraph/: CMakeLists.txt  main.cpp
ch4/2_GraphGenerator/: CMakeLists.txt  main.cpp
ch4/30_KosarajuSharirSCC/: CMakeLists.txt  main.cpp
ch4/31_TarjanSCC/: CMakeLists.txt  main.cpp
ch4/32_GabowSCC/: CMakeLists.txt  main.cpp
ch4/33_EdgeWeightedGraph/: CMakeLists.txt  main.cpp
ch4/34_Edge/: CMakeLists.txt  main.cpp
ch4/35_LazyPrimMST/: CMakeLists.txt  main.cpp
ch4/36_PrimMST/: CMakeLists.txt  main.cpp
ch4/37_KruskalMST/: CMakeLists.txt  main.cpp
ch4/38_BoruvkaMST/: CMakeLists.txt  main.cpp
ch4/39_EdgeWeightedDigraph/: CMakeLists.txt  main.cpp
ch4/head/: CC.h  (+48 more)
ch5/: CMakeLists.txt
(+84 files in other folders)
