cmake_minimum_required(VERSION 3.12)
project(ch1)

set(CMAKE_CXX_STANDARD 17)

include_directories(head)
include_directories(data)

add_subdirectory(1_BinarySearch)
add_subdirectory(2_RandomSeq)
add_subdirectory(3_Average)
add_subdirectory(4_Cat)
add_subdirectory(5_Knuth)
add_subdirectory(6_Counter)
add_subdirectory(7_StaticSETofInts)
add_subdirectory(8_Whitelist)
add_subdirectory(9_vector)
add_subdirectory(10_Date)
add_subdirectory(11_Transaction)
add_subdirectory(12_Point2D)
add_subdirectory(13_RectHV)
add_subdirectory(14_Interval1D)
add_subdirectory(15_Interval2D)
add_subdirectory(16_Accumulator)
add_subdirectory(17_ResizingArrayStack)
add_subdirectory(18_LinkedStack)
add_subdirectory(19_Stack)
add_subdirectory(20_ResizingArrayQueue)
add_subdirectory(21_LinkedQueue)
add_subdirectory(22_Queue)
add_subdirectory(23_ResizingArrayBag)
add_subdirectory(24_LinkedBag)
add_subdirectory(25_Bag)
add_subdirectory(26_Stopwatch)
add_subdirectory(27_StopwatchCPU)
add_subdirectory(28_LinearRegression)
add_subdirectory(29_ThreeSum)
add_subdirectory(30_ThreeSumFast)
add_subdirectory(31_DoublingTest)
add_subdirectory(32_DoublingRatio)
add_subdirectory(33_QuickFindUF)
add_subdirectory(34_QuickUnionUF)
add_subdirectory(35_WeightedQuickUnionUF)
add_subdirectory(36_UF)