cmake_minimum_required(VERSION 3.8)
project(ch4)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(1_Graph)
add_subdirectory(2_GraphGenerator)
add_subdirectory(3_DepthFirstSearch)
add_subdirectory(4_NonrecursiveDFS)
add_subdirectory(5_DepthFirstPaths)
add_subdirectory(6_BreadthFirstPaths)
add_subdirectory(7_CC)
add_subdirectory(8_Bipartite)
add_subdirectory(9_BipartiteX)
add_subdirectory(10_Cycle)

add_subdirectory(temp)