cmake_minimum_required(VERSION 3.8)
project(ch4)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(1_Graph)
add_subdirectory(2_GraphGenerator)
add_subdirectory(3_DepthFirstSearch)
add_subdirectory(4_NonrecursiveDFS)
add_subdirectory(5_DepthFirstPaths)
add_subdirectory(6_BreadthFirstPaths)
add_subdirectory(7_CC)
add_subdirectory(8_Bipartite)
add_subdirectory(9_BipartiteX)
add_subdirectory(10_Cycle)
add_subdirectory(11_EulerianCycle)
add_subdirectory(12_EulerianPath)
add_subdirectory(13_SymbolGraph)
add_subdirectory(14_DegreesOfSeparation)
add_subdirectory(15_Digraph)
add_subdirectory(16_DigraphGenerator)
add_subdirectory(17_DirectedDFS)
add_subdirectory(18_NonrecursiveDirectedDFS)
add_subdirectory(19_DepthFirstDirectedPaths)
add_subdirectory(20_BreadthFirstDirectedPaths)
add_subdirectory(21_DirectedCycle)
add_subdirectory(22_DirectedCycleX)
add_subdirectory(23_DirectedEulerianCycle)
add_subdirectory(24_DirectedEulerianPath)
add_subdirectory(25_DepthFirstOrder)
add_subdirectory(26_Topological)
add_subdirectory(27_TopologicalX)
add_subdirectory(28_TransitiveClosure)
add_subdirectory(29_SymbolDigraph)
add_subdirectory(30_KosarajuSharirSCC)
add_subdirectory(31_TarjanSCC)
add_subdirectory(32_GabowSCC)
add_subdirectory(33_EdgeWeightedGraph)
add_subdirectory(34_Edge)
add_subdirectory(35_LazyPrimMST)
add_subdirectory(36_PrimMST)
add_subdirectory(37_KruskalMST)
add_subdirectory(38_BoruvkaMST)
add_subdirectory(39_EdgeWeightedDigraph)
add_subdirectory(40_DirectedEdge)
add_subdirectory(41_DijkstraSP)
add_subdirectory(42_DijkstraUndirectedSP)
add_subdirectory(43_DijkstraAllPairsSP)
add_subdirectory(44_AcyclicSP)
add_subdirectory(45_AcyclicLP)
add_subdirectory(46_CPM)
add_subdirectory(47_BellmanFordSP)
add_subdirectory(48_EdgeWeightedDirectedCycle)
add_subdirectory(49_Arbitrage)
add_subdirectory(50_FloydWarshall)
add_subdirectory(51_AdjMatrixEdgeWeightedDigraph)
add_subdirectory(temp)